--- a/src/IronSharePoint/IronSharePoint.csproj
+++ b/src/IronSharePoint/IronSharePoint.csproj
@@ -158,6 +158,7 @@
       <SharePointProjectItemId>{5ae035c6-762c-45d6-92cf-ceceb0274afa}</SharePointProjectItemId>
     </None>
     <None Include="key.snk" />
+    <None Include="Layouts\IronSP\IronConsole.coffee" />
     <None Include="Layouts\IronSP\IronService.ashx" />
     <None Include="Layouts\IronSP\IronConsoleService.ashx" />
     <None Include="Layouts\SharePointProjectItem.spdata">
