--- a/test/IronSharePoint.Test/packages.config
+++ b/test/IronSharePoint.Test/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NUnit" version="2.6.1" />
+  <package id="NUnit.Should" version="1.0.2.0" targetFramework="net35" />
 </packages>
