--- a/test/IronSharePoint.Test.Unit/IronSharePoint.Test.Unit.csproj
+++ b/test/IronSharePoint.Test.Unit/IronSharePoint.Test.Unit.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{4E1E1D6A-6564-4307-BF64-17D7724A0230}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IronSharePoint.Test</RootNamespace>
-    <AssemblyName>IronSharePoint.Test</AssemblyName>
+    <RootNamespace>IronSharePoint.Test.Unit</RootNamespace>
+    <AssemblyName>IronSharePoint.Test.Unit</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -40,7 +40,7 @@
   <ItemGroup>
     <Reference Include="nunit.framework, Version=2.6.1.12217, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\NUnit.2.6.1\lib\nunit.framework.dll</HintPath>
+      <HintPath>..\..\..\packages\NUnit.2.6.1\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
