Properly named the Iron Console Web Part and the Response Fixture

--- a/src/IronSharePoint/IronSharePoint.csproj
+++ b/src/IronSharePoint/IronSharePoint.csproj
@@ -93,7 +93,7 @@
     </Compile>
     <Compile Include="IIronControl.cs" />
     <Compile Include="IIronDataStore.cs" />
-    <Compile Include="IronConsole\IronConsole.cs" />
+    <Compile Include="IronConsole\IronConsoleWebPart.cs" />
     <Compile Include="IronConsole\Response.cs" />
     <Compile Include="IronConsole\IronConsoleUserControl.ascx.cs">
       <DependentUpon>IronConsoleUserControl.ascx</DependentUpon>
