Forgot to save .csproj file before commiting...

--- a/test/IronSharePoint.Test.Unit/IronSharePoint.Test.Unit.csproj
+++ b/test/IronSharePoint.Test.Unit/IronSharePoint.Test.Unit.csproj
@@ -51,7 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets.cs" />
-    <Compile Include="IronConsole\Response_Fixture.cs" />
+    <Compile Include="IronConsole\IronConsoleResult_Fixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
