Updated project files to include the new gem and .rb files

--- a/src/IronSharePoint.IronRuby10/IronSharePoint.IronRuby10.csproj
+++ b/src/IronSharePoint.IronRuby10/IronSharePoint.IronRuby10.csproj
@@ -105,6 +105,7 @@
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\cache\evalhook-0.5.0.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\cache\getsource-0.2.1.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\cache\haml-2.2.24.gem" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\cache\i18n-0.6.1.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\cache\json_pure-1.7.5.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\cache\liquid-2.0.0.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\cache\liquid-2.4.0.gem" />
@@ -320,6 +321,100 @@
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\haml-2.2.24\test\test_helper.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\haml-2.2.24\VERSION" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\haml-2.2.24\VERSION_NAME" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\CHANGELOG.textile" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\ci\Gemfile.no-rails" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\ci\Gemfile.no-rails.lock" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\ci\Gemfile.rails-2.3.x" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\ci\Gemfile.rails-2.3.x.lock" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\ci\Gemfile.rails-3.x" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\ci\Gemfile.rails-3.x.lock" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\backend.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\backend\base.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\backend\cache.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\backend\cascade.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\backend\chain.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\backend\fallbacks.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\backend\flatten.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\backend\gettext.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\backend\interpolation_compiler.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\backend\key_value.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\backend\memoize.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\backend\metadata.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\backend\pluralization.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\backend\simple.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\backend\transliterator.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\config.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\core_ext\hash.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\core_ext\kernel\surpress_warnings.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\core_ext\string\interpolate.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\exceptions.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\gettext.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\gettext\helpers.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\gettext\po_parser.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\interpolate\ruby.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\locale.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\locale\fallbacks.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\locale\tag.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\locale\tag\parents.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\locale\tag\rfc4646.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\locale\tag\simple.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\tests.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\tests\basics.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\tests\defaults.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\tests\interpolation.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\tests\link.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\tests\localization.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\tests\localization\date.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\tests\localization\date_time.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\tests\localization\procs.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\tests\localization\time.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\tests\lookup.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\tests\pluralization.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\tests\procs.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\lib\i18n\version.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\MIT-LICENSE" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\README.textile" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\all.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\api\all_features_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\api\cascade_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\api\chain_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\api\fallbacks_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\api\key_value_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\api\memoize_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\api\override_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\api\pluralization_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\api\simple_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\backend\cache_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\backend\cascade_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\backend\chain_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\backend\exceptions_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\backend\fallbacks_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\backend\interpolation_compiler_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\backend\key_value_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\backend\memoize_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\backend\metadata_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\backend\pluralization_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\backend\simple_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\backend\transliterator_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\core_ext\hash_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\core_ext\string\interpolate_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\gettext\api_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\gettext\backend_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\i18n\exceptions_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\i18n\interpolate_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\i18n\load_path_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\i18n_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\locale\fallbacks_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\locale\tag\rfc4646_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\locale\tag\simple_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\run_all.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\test_data\locales\de.po" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\test_data\locales\en.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\test_data\locales\en.yml" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\test_data\locales\invalid\empty.yml" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\test_data\locales\plurals.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\i18n-0.6.1\test\test_helper.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\.travis.yml" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\CHANGES" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\COPYING" />
@@ -581,6 +676,7 @@
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\tilt-1.3.3\tilt.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\specifications\evalhook-0.5.0.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\specifications\haml-2.2.24.gemspec" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\specifications\i18n-0.6.1.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\specifications\json_pure-1.7.5.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\specifications\liquid-2.0.0.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\specifications\partialruby-0.2.0.gemspec" />
@@ -591,6 +687,8 @@
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\specifications\tilt-1.3.3.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\iconv.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\IronRuby.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\IronSharePoint.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\Microsoft.SharePoint.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\nkf.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\open3.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\openssl.rb" />
