--- a/src/IronSharePoint/IronSharePoint.csproj
+++ b/src/IronSharePoint/IronSharePoint.csproj
@@ -83,6 +83,13 @@
     <Reference Include="Microsoft.SharePoint.Security" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ControlTemplates\IronSP\IronHiveScriptControl.ascx.cs">
+      <DependentUpon>IronHiveScriptControl.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ControlTemplates\IronSP\IronHiveScriptControl.ascx.designer.cs">
+      <DependentUpon>IronHiveScriptControl.ascx.cs</DependentUpon>
+    </Compile>
     <Compile Include="IronCompositeControl.cs" />
     <Compile Include="EventReceivers\IronScriptCompilerReceiver.cs" />
     <Compile Include="Features\IronSP_Farm\IronSP_Farm.EventReceiver.cs">
@@ -125,6 +132,13 @@
     <Compile Include="IronWrapperUserControl.cs">
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
+    <Compile Include="Layouts\IronSP\IronEditor.aspx.cs">
+      <DependentUpon>IronEditor.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Layouts\IronSP\IronEditor.aspx.designer.cs">
+      <DependentUpon>IronEditor.aspx.cs</DependentUpon>
+    </Compile>
     <Compile Include="Layouts\IronSP\IronService.ashx.cs">
       <DependentUpon>IronService.ashx</DependentUpon>
     </Compile>
@@ -140,6 +154,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="app.config" />
+    <None Include="ControlTemplates\SharePointProjectItem.spdata">
+      <SharePointProjectItemId>{59d42f7e-41b6-4989-aa42-58f74002ef8b}</SharePointProjectItemId>
+    </None>
+    <None Include="DelegateControls\IronHiveScriptControl\SharePointProjectItem.spdata">
+      <SharePointProjectItemId>{f25008d4-c714-4b53-9241-da106544379a}</SharePointProjectItemId>
+    </None>
     <None Include="Features\IronSP_Hive_Site\IronSP_Hive_Site.feature">
       <FeatureId>{cea2b887-e17d-4dbe-a477-4f7c8bdf03be}</FeatureId>
     </None>
@@ -196,6 +216,10 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="ControlTemplates\IronSP\IronHiveScriptControl.ascx">
+      <SubType>ASPXCodeBehind</SubType>
+    </Content>
+    <Content Include="DelegateControls\IronHiveScriptControl\Elements.xml" />
     <Content Include="Features\IronSP_Hive_Site\IronSP_Hive_Site.Template.xml">
       <DependentUpon>IronSP_Hive_Site.feature</DependentUpon>
     </Content>
@@ -219,6 +243,57 @@
     </Content>
     <Content Include="ContentTypes\IronScript\Elements.xml">
       <SubType>Designer</SubType>
+    </Content>
+    <Content Include="Layouts\IronSP\ace\ace-uncompressed.js" />
+    <Content Include="Layouts\IronSP\ace\ace.js" />
+    <Content Include="Layouts\IronSP\ace\cockpit-uncompressed.js" />
+    <Content Include="Layouts\IronSP\ace\cockpit.js" />
+    <Content Include="Layouts\IronSP\ace\keybinding-emacs.js" />
+    <Content Include="Layouts\IronSP\ace\keybinding-vim.js" />
+    <Content Include="Layouts\IronSP\ace\mode-clojure.js" />
+    <Content Include="Layouts\IronSP\ace\mode-coffee.js" />
+    <Content Include="Layouts\IronSP\ace\mode-csharp.js" />
+    <Content Include="Layouts\IronSP\ace\mode-css.js" />
+    <Content Include="Layouts\IronSP\ace\mode-c_cpp.js" />
+    <Content Include="Layouts\IronSP\ace\mode-groovy.js" />
+    <Content Include="Layouts\IronSP\ace\mode-html.js" />
+    <Content Include="Layouts\IronSP\ace\mode-java.js" />
+    <Content Include="Layouts\IronSP\ace\mode-javascript.js" />
+    <Content Include="Layouts\IronSP\ace\mode-json.js" />
+    <Content Include="Layouts\IronSP\ace\mode-ocaml.js" />
+    <Content Include="Layouts\IronSP\ace\mode-perl.js" />
+    <Content Include="Layouts\IronSP\ace\mode-php.js" />
+    <Content Include="Layouts\IronSP\ace\mode-python.js" />
+    <Content Include="Layouts\IronSP\ace\mode-ruby.js" />
+    <Content Include="Layouts\IronSP\ace\mode-scad.js" />
+    <Content Include="Layouts\IronSP\ace\mode-scala.js" />
+    <Content Include="Layouts\IronSP\ace\mode-scss.js" />
+    <Content Include="Layouts\IronSP\ace\mode-svg.js" />
+    <Content Include="Layouts\IronSP\ace\mode-textile.js" />
+    <Content Include="Layouts\IronSP\ace\mode-xml.js" />
+    <Content Include="Layouts\IronSP\ace\theme-clouds.js" />
+    <Content Include="Layouts\IronSP\ace\theme-clouds_midnight.js" />
+    <Content Include="Layouts\IronSP\ace\theme-cobalt.js" />
+    <Content Include="Layouts\IronSP\ace\theme-crimson_editor.js" />
+    <Content Include="Layouts\IronSP\ace\theme-dawn.js" />
+    <Content Include="Layouts\IronSP\ace\theme-eclipse.js" />
+    <Content Include="Layouts\IronSP\ace\theme-idle_fingers.js" />
+    <Content Include="Layouts\IronSP\ace\theme-kr_theme.js" />
+    <Content Include="Layouts\IronSP\ace\theme-merbivore.js" />
+    <Content Include="Layouts\IronSP\ace\theme-merbivore_soft.js" />
+    <Content Include="Layouts\IronSP\ace\theme-monokai.js" />
+    <Content Include="Layouts\IronSP\ace\theme-mono_industrial.js" />
+    <Content Include="Layouts\IronSP\ace\theme-pastel_on_dark.js" />
+    <Content Include="Layouts\IronSP\ace\theme-solarized_dark.js" />
+    <Content Include="Layouts\IronSP\ace\theme-solarized_light.js" />
+    <Content Include="Layouts\IronSP\ace\theme-textmate.js" />
+    <Content Include="Layouts\IronSP\ace\theme-twilight.js" />
+    <Content Include="Layouts\IronSP\ace\theme-vibrant_ink.js" />
+    <Content Include="Layouts\IronSP\ace\worker-coffee.js" />
+    <Content Include="Layouts\IronSP\ace\worker-css.js" />
+    <Content Include="Layouts\IronSP\ace\worker-javascript.js" />
+    <Content Include="Layouts\IronSP\IronEditor.aspx">
+      <SubType>ASPXCodeBehind</SubType>
     </Content>
     <Content Include="Layouts\IronSP\IronConsole.js" />
     <Content Include="Layouts\IronSP\jquery-fieldselection.min.js" />
