--- a/.gitattributes
+++ b/.gitattributes
@@ -7,7 +7,7 @@
 
 # These files should always have a CRLF ending
 ## Code
-*.cs      text eol=crlf
+*.cs      text eol=crlf diff=csharp
 *.js      text eol=crlf
 *.aspx    text eol=crlf
 *.ashx    text eol=crlf
@@ -22,12 +22,12 @@
 *.config  text eol=crlf
 
 ## VS Stuff
-*.sln     text eol=crlf
+*.sln     text eol=crlf merge=union
 *.package text eol=crlf
 *.feature text eol=crlf
 *.snk     text eol=crlf
 *.spdata  text eol=crlf
-*.csproj  text eol=crlf
+*.csproj  text eol=crlf merge=union
 *.msbuild text eol=crlf
 
 # Denote all files that are truly binary and should not be modified.
