--- a/src/IronSharePoint/IronSharePoint.csproj
+++ b/src/IronSharePoint/IronSharePoint.csproj
@@ -122,6 +122,9 @@
     <Compile Include="IronConstant.cs" />
     <Compile Include="IronContentTypeId.cs" />
     <Compile Include="IronHttpHandler.cs" />
+    <Compile Include="IronLog\IronLogger.cs" />
+    <Compile Include="IronLog\IronLogWorkItemJobDefinition.cs" />
+    <Compile Include="IronLog\LogLevel.cs" />
     <Compile Include="IronWrapperControl.cs" />
     <Compile Include="Diagnostics\IronDiagnosticService.cs" />
     <Compile Include="IronControl.cs" />
@@ -201,6 +204,9 @@
     </None>
     <None Include="Lists\IronHive\SharePointProjectItem.spdata">
       <SharePointProjectItemId>{880960ed-55af-46cc-a291-3bc601bddf46}</SharePointProjectItemId>
+    </None>
+    <None Include="Lists\IronLogs\SharePointProjectItem.spdata">
+      <SharePointProjectItemId>{8d33b9b0-7a01-4eb4-93be-57e5ae318020}</SharePointProjectItemId>
     </None>
     <None Include="packages.config">
       <SubType>Designer</SubType>
@@ -305,6 +311,7 @@
     <Content Include="Lists\IronHive\Repair.aspx" />
     <Content Include="Lists\IronHive\Schema.xml" />
     <Content Include="Lists\IronHive\Upload.aspx" />
+    <Content Include="Lists\IronLogs\Elements.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\SharePointTools\Microsoft.VisualStudio.SharePoint.targets" />
